Address comments